       homegrown collection loaders and such.

     - Query won't fail with weakref error when a non-mapper/class
       instrumented descriptor is passed, raises 
       "Invalid column expession".
    
     - Query.group_by() properly takes into account aliasing applied
       to the FROM clause, such as with select_from(), using
       with_polymorphic(), or using from_self().
        
- sql
    - Fixed missing _label attribute on Function object, others
      when used in a select() with use_labels (such as when used
      in an ORM column_property()).  [ticket:1302]

    - anonymous alias names now truncate down to the max length
      allowed by the dialect.  More significant on DBs like
      Oracle with very small character limits. [ticket:1309]
      
    - the __selectable__() interface has been replaced entirely
      by __clause_element__().

    - The per-dialect cache used by TypeEngine to cache
      dialect-specific types is now a WeakKeyDictionary.
      This to prevent dialect objects from 
      being referenced forever for an application that 
      creates an arbitrarily large number of engines
      or dialects.   There is a small performance penalty
      which will be resolved in 0.6.  [ticket:1299]

- sqlite
    - Fixed SQLite reflection methods so that non-present
      cursor.description, which triggers an auto-cursor
      close, will be detected so that no results doesn't
      fail on recent versions of pysqlite which raise 
      an error when fetchone() called with no rows present.
      
- postgres
    - Index reflection won't fail when an index with 
      multiple expressions is encountered.
      
    - Added PGUuid and PGBit types to 
      sqlalchemy.databases.postgres. [ticket:1327]
    
    - Refection of unknown PG types won't crash when those
      types are specified within a domain.  [ticket:1327]

- mssql
    - Preliminary support for pymssql 1.0.1

    - Corrected issue on mssql where max_identifier_length was